Changed light template to fix alignment issues

--- a/MainTemplate.css
+++ b/MainTemplate.css
@@ -79,21 +79,21 @@ header {
 	background-color:green;
 	color: black;
 	float: left;
-	width: 33%;
+	width: 30%;
 	height:420px;
-	margin: 0px, 0px, 0px, 0px;
+	margin: 0px, 0px, 0px, 2%;
 	padding-bottom:0;
 	border-radius: 5px;
-	border-left-style: solid;
+	border-style: solid;
 	border-color: black;
 	border-width: medium;
 }
-    @media screen and (max-width:900px){
+    @media screen and (max-width:900px){ /*previously set for 900 changed to get tablet mobile device capability */
 .sidebar1 {
 	background-color:yellowgreen;
 	color: black;
 	float: left;
-	width: 49%;
+	width: 100%;
 	height:420px;
 	padding-bottom:0;
 	/*border-style: solid;
@@ -101,6 +101,7 @@ header {
 
 	}
 }
+/* REMOVING THIS TO GET TABLET AND MOBILE PHONE TO WORK BETTER
 	@media screen and (max-width:480px) {
 .sidebar1 {
 	background-color:green;
@@ -113,18 +114,19 @@ header {
 	border-color: black;
 	}
 }
+*/
 
 .midbody {
 	background-color:whitesmoke;
 	color: black;
 	float: left;
-	width: 33%;
+	width: 30%;
 	height:420px;
-	margin: 0px, 0px, 0px, 0px;
+	margin-left: 4%;
+	margin-right: 3%;
 	padding:0px, 0px, 0px, 0px;
 	border-radius: 5px;
-	border-left-style: solid;
-	border-right-style: solid;
+	border-style: solid;
 	border-color: black;
 	border-width: medium;	
 	
@@ -133,14 +135,17 @@ header {
 .midbody {
 	background-color:whitesmoke;
 	color: black;
-	float: right;
-	width: 49%;
+	float: left;
+	width: 100%;
 	height:420px;
 	padding:0;
+	margin: 0%;
+	
 	/*border-style: solid;
 	border-color: black;*/
 	}
 }
+/*  REMOVING THIS TO GET TABLET AND MOBILE PHONE TO WORK BETTER
 	@media screen and (max-width:480px) {
 .midbody {
 	background-color:whitesmoke;
@@ -152,23 +157,23 @@ header {
 	border-style: solid;
 	border-color: black;	}
 }
-
-.sidebar2 {
-	background-color:silver;
-	color: black;
-	float: left;
-	width: 33%;
-	height: 420px;
-	margin: 0px, 0px, 0px, 0px;
-	border-radius: 5px;
-	border-right-style: solid;
-	border-width: medium;
-}
-    @media screen and (max-width:900px){
+*/
 .sidebar2 {
 	background-color:silver;
 	color: black;
 	float: right;
+	width: 30%;
+	height: 420px;
+	margin: 0px, 0px, 0px, 0px;
+	border-radius: 5px;
+	border-style: solid;
+	border-width: medium;
+}
+    @media screen and (max-width:900px){ /* changed from 900 to better help tablet/mobile workability*/
+.sidebar2 {
+	background-color:silver;
+	color: black;
+	float: left;
 	width: 100%;
 	height: 420px;
 	padding-bottom:0;
@@ -176,6 +181,7 @@ header {
 	border-color: black;
 	}
 }
+/* REMOVING THIS TO GET TABLET AND MOBILE PHONE TO WORK BETTER
 	@media screen and (max-width:480px) {
 .sidebar2 {
 	background-color:silver;
@@ -187,6 +193,7 @@ header {
 	border-style: solid;
 	border-color: black;	}
 }
+*/
 
 ul, ol, dl { 
 	padding: 0;
